--- a/res/values/themes.xml
+++ b/res/values/themes.xml
@@ -52,6 +52,8 @@
 
         <!-- For all Alert Dialogs -->
         <item name="alertDialogTheme">@style/Theme.AlertDialog</item>
+
+        <item name="android:titleTextColor">?android:attr/colorAccent</item>
     </style>
 
     <style name="Theme.SubSettings" parent="Theme.Settings">
@@ -63,6 +65,11 @@
 
     <style name="Theme.ActionBar" parent="@android:style/Widget.Material.ActionBar.Solid">
         <item name="contentInsetStart">@dimen/actionbar_contentInsetStart</item>
+        <item name="android:titleTextStyle">@style/ActionBar.TitleTextStyle</item>
+    </style>
+
+    <style name="ActionBar.TitleTextStyle" parent="@style/TextAppearance.AppCompat.Widget.ActionBar.Title">
+        <item name="android:textColor">?android:attr/colorAccent</item>
     </style>
 
     <style name="Theme.ActionBar.SubSettings" parent="Theme.ActionBar">
